--- a/index.html
+++ b/index.html
@@ -37,9 +37,17 @@
                 <li class="four"><a href="ingredients.html">Ingredients</a></li>
                 <li class="five"><a href="contactUs.html">Contact Us</a></li>
             </ul> -->
-            <ul>
+            <!-- <ul>
                 <button id="tst">ClickMe</button>
                 <li class="one"><a href="/search.html/"></a>Search</li>
+                <li class="two"><a href="categories.html">Categories</a></li>
+                <li class="three"><a href="area.html">Area</a></li>
+                <li class="four"><a href="ingredients.html">Ingredients</a></li>
+                <li class="five"><a href="contactUs.html">Contact Us</a></li>
+            </ul> -->
+            <ul>
+                <!-- <li class="one">Search</li> -->
+                <li class="one"><a href="search.html">Search</a></li>
                 <li class="two"><a href="categories.html">Categories</a></li>
                 <li class="three"><a href="area.html">Area</a></li>
                 <li class="four"><a href="ingredients.html">Ingredients</a></li>
